Add method report's version compare

--- a/ReportManager/Config.json
+++ b/ReportManager/Config.json
@@ -1,6 +1,6 @@
 {"AppHomeDir":"C:\GB\GB_HomeWorks\ReportManager\\",
  "ReportsHomeDir":"C:\GB\ReportManager\Reports\\",
- "ReportsNetDir":"C:\GB\ReportManager\Reports\\",
+ "ReportsNetDir":"C:\Soft\Reports\\",
  "ReportsResultDir":"C:\GB\ReportManager\Reports\\",
  "ConfigInfoDB":"jdbc:mysql://localhost:3306/enterprise"}
 
